--- a/style.css
+++ b/style.css
@@ -27,16 +27,19 @@ a{
 .top-button{
     margin-left: 5px;
 }
+.top-button-tag{
+    font-weight: bold;
+}
 
 /* Section1 starts */
 h1,a{
     color:rgb(71, 69, 69);
 }
 .header1{
-    font-size: 40px;
+    font-size: 45px;
 }
-.orange{
-    color: rgb(245, 84, 21);
+.blue{
+    color: rgb(3, 109, 247);
 }
 .half-width{
     width: 50%;
@@ -55,21 +58,35 @@ h1,a{
 }
 /* Design for all Buttons */
 button{
-    background-image: linear-gradient(90deg,rgb(231,50,2), rgb(233, 154, 64));
+    background-image: linear-gradient(90deg,rgb(21, 81, 245), rgb(38, 172, 182));
     border: none;
     padding: 9px 20px;
     font-size: 20px;
-    font-weight: bold;
     border-radius: 50px;
     color: white;
 } 
 /* Section2 starts */
 .section2{
+    margin-top: 110px;
     display: flex;
+    align-items: center;
+    background-image: url(food-network-main/images/usable/frame.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 470px;
 }
 .text-header2{
     width:35%;
 }
 .header2{
-    font-size: 27px;
+    font-size: 32px;
+}
+.img-header2{
+    display: flex;
+    justify-content: center;
+    margin-top: auto;
+}
+.img-head2{
+    height: 340px;
+    margin-right: 30px;
 }
