--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ button{
 }
 .header2{
     font-size: 32px;
+    text-align: center;
 }
 .img-header2{
     display: flex;
@@ -89,4 +90,34 @@ button{
 .img-head2{
     height: 340px;
     margin-right: 30px;
+}
+/* section3 starts */
+.section3{
+    margin-top: 100px;
+}
+.boxes{
+    margin-top: 60px;
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;  
+}
+.box{
+    box-shadow: 0px 0px 20px 5px rgba(100,99,107,0.49);
+    margin:0px 30px;
+    padding: 25px;
+    border-radius: 15px;
+    width:350px;
+    height: 540px;
+}
+.recipies{
+    text-align: center;
+}
+.card-img{
+    height:250px;
+    width: 444.44px;
+    border-radius: 15px;
+}
+.img-card-div{
+    display: flex;
+    justify-content: center;
 }
