--- a/style.css
+++ b/style.css
@@ -121,3 +121,21 @@ button{
     display: flex;
     justify-content: center;
 }
+
+/* Section 4 starts here */
+
+.section4{
+    margin-top: 120px;
+    display: flex;
+    justify-content: center;
+}
+.all-texts-section4{
+    display: flex;
+    justify-content: center;
+    box-shadow: 0px 0px 20px 5px rgba(100,99,107,0.49);
+    width: 1000px;
+    border-radius: 15px;
+}
+.text-section4{
+    margin:0px 80px;
+}
