--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@ a{
     align-items: center;
 }
 .top-bar{
-    border-bottom: 2px solid rgb(71, 69, 69);
+    box-shadow: 0px 3px 36px -12px rgba(0,0,0,0.35);
 }
 .top-text{
-    margin: 11px 25px;
+    margin: 11px 30px;
 }
 .top-button{
-    margin-left: 5px;
+    margin-left: 6px;
 }
 .top-button-tag{
     font-weight: bold;
@@ -116,16 +116,15 @@ button{
     margin:0px 25px;
     padding: 25px;
     border-radius: 15px;
-    width:310px;
+    width: 310px;
     height: 540px;
 }
 .recipies{
     text-align: center;
 }
 .card-img{
-    height:236px;
-    width:419.55px;
-    
+    height: 236px;
+    width: 419.55px;
     border-radius: 15px;
 }
 .img-card-div{
@@ -174,10 +173,10 @@ button{
 footer{
     color: white;
     text-align: center;
-    margin-top: 80px;
+    margin-top: 110px;
     background-color: black;
     width:100%;
-    height: 200px;
+    height: 240px;
     display: block;
     padding-top: 30px;
 }
